--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   ],
   "devDependencies": {
     "@babel/core": "^7.4.3",
+    "@storybook/addon-info": "^5.0.6",
     "@storybook/react": "^5.0.6",
     "babel-loader": "^8.0.5"
   }
